helm/apps/mealie/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-postgres
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie-postgres
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: mealie-postgres
