helm/apps/mealie/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie-postgres
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.kds-dev.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
  tls: {}
